--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+button {
+  height: 60px;
+  width: 60px;
+  font-size: 30px;
+  background-color: rgb(92, 71, 211);
+  border-radius: 10px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+span {
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  text-align: center;
+  font-size: 30px;
+  border-radius: 10px;
+  color: rgb(92, 71, 211);
+  font-weight:bold;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reset {
+  width: 120px;
+  cursor: pointer;
 }
+
+.addCounter{
+  width: 200px;
+  margin-bottom: 130px;
+}
+
